--- a/.env
+++ b/.env
@@ -1,20 +1,20 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
+SESSION_ID="INCONNU~XD~7kxyRbRa#PH1iKIvj8q4loSYHRv6zMCBdzCynt5CiZnJdg8UjFFI"
 PREFIX=.
-OWNER_NUMBER=554488138425
-SUDO_NUMBER=554488138425
+OWNER_NUMBER=243904581829
+SUDO_NUMBER=242904581829
 OWNER_NAME=INCONNU BOY
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
 AUTO_STATUS_REACT=true
 AUTO_READ=false
-AUTO_RECORDING=false
+AUTO_RECORDING=true
 AUTO_REACT=false
 STATUS_READ_MSG=STATUS VIEWED BY INCONNU XD V2 ✅
-ANTILINK=false
+ANTILINK=true
 ANTIBOT=true
 ANTIBOT_WARNINGS=3
 REJECT_CALL=false
 NOT_ALLOW=true
 AUTO_STATUS_REACT=true
-MODE=public
-WELCOME=false
+MODE=prive
+WELCOME=true
